[package]
name = "example"
version = "0.1.0"
authors = ["Adam Becker <im.adam.becker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libretro-rs = { path = "../libretro-rs" }

[lib]
crate-type = ["cdylib"]
