[package]
name = "example"
version = "0.1.0"
authors = ["Adam Becker <apbecker@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
libretro-rs = { path = "../libretro-rs", features = ["experimental"] }

[lib]
crate-type = ["cdylib"]
