[package]
name = "libretro-rs"
description = "High-level abstractions for the libretro API"
readme = "README.md"
repository = "https://github.com/libretro-rs/libretro-rs"
license = "MIT/Apache-2.0"
version = "0.1.3"
authors = ["Adam Becker <im.adam.becker@gmail.com>"]
edition = "2021"

[dependencies]
libretro-rs-sys = { path = "../libretro-rs-sys" }
