[package]
name = "libretro-rs"
description = "High-level abstractions for the libretro API"
readme = "README.md"
repository = "https://github.com/libretro-rs/libretro-rs"
license = "MIT/Apache-2.0"
version = "0.2.0-SNAPSHOT"
authors = [
  "Adam Becker <apbecker@protonmail.com>",
  "Armando Doval <armando.doval88@gmail.com>"
]
edition = "2021"

[features]
experimental = []

[dependencies]
libretro-rs-sys = { path = "../libretro-rs-sys" }
c_utf8 = "0.1.0"